test/failing/missing_paren.yadl
// RUN: DEFAULT
print(1

